fix(select): Fixing bug with select menu z-index
Some elements were showing up over the select menu's pop out. e.g.
radio-buttons. To demonstrate the problem, I copied demos/radio.html:72-94 into
demos/select.html just after line 74. This puts a radio button right
where the select menu pops up. When running the demo without the fix,
you can see the radio button over the select menu. With the z-index fix,
the menu appropriately pops up over the radio-button.

Fixes [Issue 432](https://github.com/material-components/material-components-web/issues/432)

--- a/packages/mdc-select/mdc-select.scss
+++ b/packages/mdc-select/mdc-select.scss
@@ -90,6 +90,7 @@
     max-height: 100%;
     transform-origin: center center;
     overflow-y: scroll;
+    z-index: 4; // Should pop up above everything else. temporary-drawer is next highest at 3.
   }
 
   &__selected-text {
